novos estudos zf2

--- a/module/Users/view/users/user-manager/index.phtml
+++ b/module/Users/view/users/user-manager/index.phtml
@@ -16,4 +16,4 @@
     <?php endforeach; ?>
 </table>
 <hr />
-<a href="<?php echo $this->url('users/upload-manager', array('action' => 'upload')); ?>">&raquo Add Upload</a>
+<a href="<?php //echo $this->url('users/upload-manager', array('action' => 'upload')); ?>">&raquo Add Upload</a>
