Estudo zf2 serviço

--- a/module/Helloworld/view/helloworld/index/index.phtml
+++ b/module/Helloworld/view/helloworld/index/index.phtml
@@ -1,1 +1,2 @@
-<h1><?php echo $this->greeting . " " . $this->displayCurrentDate(); ?></h1>
+<h1><?php echo $this->greeting . " " . $this->displayCurrentDate() . " " . $this->data; ?></h1>
+<h1><?php echo $this->widgetContent; ?></h1>
