--- a/module/Helloworld/view/helloworld/index/index.phtml
+++ b/module/Helloworld/view/helloworld/index/index.phtml
@@ -4,9 +4,16 @@ $form = $this->form;
 $form->prepare();
 //$this->form->setAttribute('action', "/teste");
 echo $this->form()->openTag($form);
-echo $this->formRow($form->get('name'));
+echo $this->formRow($this->form->get('user')->get('name'));
+echo $this->formRow($this->form->get('user')->get('email'));
+echo $this->formRow($this->form->get('user')->get('userAddress')->get('street'));
+echo $this->formRow($this->form->get('user')->get('userAddress')->get('streetNumber'));
+echo $this->formRow($this->form->get('user')->get('userAddress')->get('zipcode'));
+echo $this->formRow($this->form->get('user')->get('userAddress')->get('city'));
+/*echo $this->formRow($form->get('name'));
 //echo $this->formElementErrors($form->get('name'));
-echo $this->formRow($form->get('email'));
+echo $this->formRow($form->get('email'));*/
+//echo $this->formRow($form->get('age'));
 echo $this->formSubmit($form->get('submit'));
 echo $this->form()->closeTag();
 
