estudos zf2 dia 01

--- a/module/Users/view/users/index/index.phtml
+++ b/module/Users/view/users/index/index.phtml
@@ -1,3 +1,2 @@
 <h1>Bem-vindo ao Módulo Usuários</h1>
-<a href="/users/index/login">Login</a> |
-<a href="/users/index/register">Novo Cadastro de usuário</a>
+<a href="/users/index/login">Login</a> | <a href="/users/index/register">Novo Cadastro de usuário</a>
