--- a/module/Users/view/users/index/new-user.phtml
+++ b/module/Users/view/users/index/new-user.phtml
@@ -1,3 +1,3 @@
 <h2>Novo Cadastro de usuário</h2>
-<p>Esta página vai conter o conteúdo para o formulário de inscrição</p>
+<p>Esta página vai conter o conteúdo para o registro forma</p>
 <a href="/users"><< Voltar para a página inicial</a>
