--- a/module/Users/view/users/register/index.phtml
+++ b/module/Users/view/users/register/index.phtml
@@ -1,47 +1,51 @@
 <section class="register">
-    <h2>Registrar</h2>
+    <h2>registrar</h2>
     <?php if($this->error): ?>
-        <p class="error">Havia um ou mais problemas com o seu envio.Corrija-os como indicado abaixo.</p>
+            <p class="error">Havia um ou mais problemas com o seu envio. Por favor, corrigi-los, tal como indicado abaixo.</p>
     <?php endif; ?>
-    <?php 
+
+    <?php
     $form = $this->form;
     $form->prepare();
-    $form->setAttribute('action', $this->url(NULL, array('controller' => 'register', 'action' => 'process')));
+    $form->setAttribute('action', $this->url(NULL, array('controller' => 'Register', 'action' => 'process')));
     $form->setAttribute('method', 'post');
     echo $this->form()->openTag($form);
     ?>
-    
-        <dl class="zend_form">
-            <dt><?php echo $this->formLabel($form->get('name')); ?></dt>
-            <dd>
-                <?php
-                echo $this->formElement($form->get('name'));
-                echo $this->formElementErrors($form->get('name'));
-                ?>
-            </dd>
-            <dt><?php echo $this->formLabel($form->get('email')); ?></dt>
-            <dd>
-                <?php
-                echo $this->formElement($form->get('email'));
-                echo $this->formElementErrors($form->get('email'));
-                ?>
-            </dd>
-            <dt><?php echo $this->formLabel($form->get('password')); ?></dt>
-            <dd>
-                <?php
-                echo $this->formElement($form->get('password'));
-                echo $this->formElementErrors($form->get('password'));
-                ?>
-            </dd>
-            <dt><?php echo $this->formLabel($form->get('confirm_password')); ?></dt>
-            <dd><?php echo $this->formElement($form->get('confirm_password')); ?></dd>
-            <dd><?php echo $this->formElementErrors($form->get('confirm_password')); ?></dd>
-            <dd>
-                <?php
-                echo $this->formElement($form->get('submit'));
-                echo $this->formElementErrors($form->get('submit'));
-                ?>
-            </dd>
-        </dl>
-        <?php echo $this->form()->closeTag(); ?>
+    <dl class="zend_form">
+        <dt><?php echo $this->formLabel($form->get('name')); ?></dt>
+        <dd>
+            <?php 
+            echo $this->formElement($form->get('name'));
+            echo $this->formElementErrors($form->get('name'));
+            ?>
+        </dd>
+        <dt><?php echo $this->formLabel($form->get('email')); ?></dt>
+        <dd>
+            <?php 
+            echo $this->formElement($form->get('email'));
+            echo $this->formElementErrors($form->get('email'));
+            ?>
+        </dd>
+        <dt><?php echo $this->formLabel($form->get('password')); ?></dt>
+        <dd>
+            <?php
+            echo $this->formElement($form->get('password'));
+            echo $this->formElementErrors($form->get('password'));
+            ?>
+        </dd>
+        <dt><?php echo $this->formLabel($form->get('confirm_password')); ?></dt>
+        <dd>
+            <?php 
+            echo $this->formElement($form->get('confirm_password'));
+            echo $this->formElementErrors($form->get('confirm_password'));
+            ?>
+        </dd>
+        <dd>
+            <?php 
+            echo $this->formElement($form->get('submit'));
+            echo $this->formElementErrors($form->get('submit'));
+            ?>
+        </dd>
+    </dl>
+    <?php echo $this->form()->closeTag();?>
 </section>
