estudos zf2 dia 08

--- a/module/Estudo/view/estudo/index/index.phtml
+++ b/module/Estudo/view/estudo/index/index.phtml
@@ -1,1 +1,34 @@
-<h1>teste module estudo</h1>
+<?php 
+$form->setAttribute('action', $this->url('home'))
+     ->prepare();
+
+echo $this->form()->openTag($form);
+
+$product = $form->get('product');
+
+echo $this->formRow($product->get('name'));
+echo $this->formRow($product->get('price'));
+echo $this->formCollection($product->get('categories'));
+
+$brand = $product->get('brand');
+
+echo $this->formRow($brand->get('name'));
+echo $this->formRow($brand->get('url'));
+
+echo $this->formHidden($form->get('csrf'));
+echo $this->formElement($form->get('submit'));
+
+echo $this->form()->closeTag();
+?>
+<button onclick="return add_category()">Adicionar uma nova categoria</button>
+<script>
+    function add_category() {
+        var currentCount = $('form > fieldset > fieldset').length;
+        var template = $('form > fieldset > span').data('template');
+        template = template.replace(/__index__/g, currentCount);
+        
+        $('form > fieldset').append(template);
+        
+        return false;
+    }
+</script>
