--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -25,6 +25,24 @@
             ->prependFile($this->basePath() . '/js/html5shiv.js',   'text/javascript', array('conditional' => 'lt IE 9',))
         ; ?>
 
+        <script>
+        $(document).ready(function(){
+            
+            $("body").on('click', '#enviar', function(){
+                $.ajax({
+                    dataType: "html",
+                    type: "POST",
+                    url: "/jquery",
+                    data: {nome: $("#nome").val()},
+                    success: function(data) {
+                        $('#teste').append(data);
+                    }
+                });
+            });
+
+        });
+        </script>
+
     </head>
     <body>
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
